src/test/ui/error-codes/E0223.stderr
error[E0223]: ambiguous associated type
  --> $DIR/E0223.rs:14:14
   |
14 |     let foo: MyTrait::X;
   |              ^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<Type as MyTrait>::X`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0223"
